--- a/app/globals.css
+++ b/app/globals.css
@@ -138,7 +138,7 @@
   }
 
   .product-title {
-    @apply text-secondary text-xl leading-6 font-semibold truncate;
+    @apply text-secondary text-xl leading-6 font-semibold truncate text-center;
   }
 
   /* SEARCHBAR INPUT */
